定时器；封装函数；定位

--- a/轮播图/轮播图.html
+++ b/轮播图/轮播图.html
@@ -132,7 +132,7 @@
         oContainer.onmouseout = function(){
            run();
        }
-       // 定时器；封装函数；定位
+       // 定时器；封装函数;定位；
     </script>
 </body>
 </html>
