animate;z-index(前提：已定位)；opacity

--- a/轮播图/淡入淡出轮播图.html
+++ b/轮播图/淡入淡出轮播图.html
@@ -138,7 +138,7 @@
         oContainer.onmouseout = function(){
            run();
        }
-    
+    // animate;z-index(前提：已定位)；opacity
     </script>
 </body>
 </html>
