xx.innerHtml = 字符串拼接;cloneNode(true);appendChild();无缝滚动：content定位改变left；

--- a/轮播图/无缝滚动.html
+++ b/轮播图/无缝滚动.html
@@ -152,7 +152,7 @@
         oContainer.onmouseout = function(){
            run();
        }
-       // xx.innerHtml = 字符串拼接;cloneNode(true);appendChild();无缝滚动； 
+       // xx.innerHtml = 字符串拼接;cloneNode(true);appendChild();无缝滚动:content定位改变left；
     </script>
 </body>
 </html>
