--- a/照片墙/照片墙.html
+++ b/照片墙/照片墙.html
@@ -111,6 +111,7 @@
                 };
             };
         }
+        //碰撞检测方法
         function testCollide(elem,target){
             var iTargetL = target.offsetLeft,
                 iTargetT = target.offsetTop,
