图片轮换播放

--- a/固定定位.html
+++ b/固定定位.html
@@ -59,3 +59,16 @@
 
 
 
+var a,b;
+(function(){
+    console.log(a);
+    console.log(b);
+    var a=b=3;
+    console.log(a);
+    console.log(b);
+})();
+console.log(a);
+console.log(b);
+
+  
+  
