--- a/html5/表单.html
+++ b/html5/表单.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <form action="" id="regist">
-        用户名: <input type="text" name="username" autocomplete="off" autofocus placeholder="请输入用户名"><br>
+        <!-- label for的是id -->
+        <label for="username">用户名:</label>
+        <input type="text" id="username" name="username" autocomplete="off" autofocus placeholder="请输入用户名"><br>
         密码： <input type="password" autofocus><br>
         性别： <input type="radio" name="sex">男
         <input type="radio" name="sex">女<br>
@@ -33,6 +35,18 @@
     </form>
 
     <!-- <input type="text" form="regist"> -->
+    <!-- <input type="text" list="addr"/>
+    <datalist id="addr">  
+        <option value="上海">上海</option>
+        <option value="北京">北京</option>
+        <option value="杭州">杭州</option>
+    </datalist>
+    //与select不同的是，select只能选，datalist带有input用户可以自己输入，并且有能够模糊匹配
+    <select>
+        <option value="上海">上海</option>
+        <option value="北京">北京</option>
+        <option value="杭州">杭州</option>
+    </select> -->
 
 
 
