对象.setAttribute("aa","dew"),对象.getAttritube("aa")与对象.属性的区别  dataset

--- a/html5/自定义数据.html
+++ b/html5/自定义数据.html
@@ -11,9 +11,9 @@
 
     <script>
         var oDiv = document.querySelector("#div1");
-//        oDiv.bb = "yy";
+//        oDiv.bb = "yy";    //Dom结构中不会显示
 //        console.log(oDiv.bb);
-//        oDiv.setAttribute("cc", "zz");
+//        oDiv.setAttribute("cc", "zz"); //Dom结构中显示
 //        console.log(oDiv.getAttribute("cc"));
         console.log(oDiv.dataset);
 //        console.log(oDiv.dataset.firstName);
