prop（特性）可以获取元素自带的属性，比如checked，id(特性的东西)

--- a/jquery/jquery练习代码/1_表单/5_全选全不选.html
+++ b/jquery/jquery练习代码/1_表单/5_全选全不选.html
@@ -32,7 +32,7 @@
         if(isCheck){
             $('#CheckedAll').prop('checked',false);
         }
-        //console.log($('[name="items"]:checked').size());
+        console.log($('[name="items"]:checked').size());
         if($('[name="items"]:checked').size() == $('[name="items"]').size()){
             $('#CheckedAll').prop('checked',true);
         }
