多行文本框高度变化

--- a/jquery/jquery练习代码/1_表单/2_多行文本框高度变化1.html
+++ b/jquery/jquery练习代码/1_表单/2_多行文本框高度变化1.html
@@ -47,7 +47,7 @@
                     //$("#text").height(height+50);
                     //是否处于动画
                     if(!$('#text').is(':animated')){
-                        //$('#text')不在执行动画的时）
+                        //$('#text')不在执行动画的时
                         $('#text').animate({
                             height:'+=50'
                         });
