文本框失去焦点

--- a/jquery/jquery练习代码/1_表单/1_文本框失去焦点.html
+++ b/jquery/jquery练习代码/1_表单/1_文本框失去焦点.html
@@ -40,7 +40,7 @@
             $(":input").focus(function(){
                 $(this).addClass('focus');
                 /*if($(this).val() == this.defaultValue){
-                    $(this).val('');
+                    $(this).val('')
                 }*/
                 if(this.value == this.defaultValue){
                     this.value = '';
