--- a/es6/string.html
+++ b/es6/string.html
@@ -9,20 +9,20 @@
 
         //includes();
 
-//        var str = "宝宝心里苦";
+       var str = "宝宝心里苦";
 //
-//        console.log(str.includes('宝宝',2));
-//        console.log(str.startsWith('宝宝',2));//
+    //    console.log(str.includes('宝宝',2));
+       console.log(str.startsWith('宝宝',2));//
 //        console.log(str.endsWith('宝宝',2));
 //
 //        console.log(str.repeat(3));
-//        var name='zs';
-//        var str = `<div>
-//                <h1>${name=='zs'?'aa':'bb'}</h1>
-//       <p></p>
-//  </div>`;
-//
-//        console.log(str);
+       var name='zs';
+       var str = `<div>
+               <h1>${name=='zs'?'aa':'bb'}</h1>
+      <p></p>
+ </div>`;
+
+       console.log(str);
 
         function fun(a,b){
             console.log(fun.length);
