--- a/es6/promise.html
+++ b/es6/promise.html
@@ -13,10 +13,11 @@
                 setTimeout(resolve, ms, 'done');
             });
             }
-
             timeout(100).then((value) => {
             console.log(value);
          });
+         //async await
+         
     </script>
 </body>
 </html>
